--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SECRET_KEY=dshafsdfjksajghasdgsdg
 DATABASE_URI=mysql+pymysql://root:senha@localhost:3306/doacao_comidas
 JWT_SECRET_KEY=shdfhsdakfsdhkfkasdkjfjasdf
+## docker run --name doacao_comidas -e MYSQL_ROOT_PASSWORD=senha -e MYSQL_DATABASE=doacao_comidas -p 3306:3306 -d mysql:latest
